// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox theme x density > matches the dark / comfortable snapshot 1`] = `
<div
  data-density="comfortable"
  data-theme="dark"
>
  <div>
    <div
      class="rh-field rh-field--inline"
    >
      <div
        class="rh-field__row"
      >
        <span
          class="rh-checkbox"
        >
          <input
            aria-describedby="snap-include-description"
            checked=""
            class="rh-checkbox__input"
            id="snap-include"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="rh-checkbox__box"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check rh-icon"
              data-icon="check"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
        </span>
        <label
          class="rh-field__label"
          for="snap-include"
        >
          Include prior sessions
        </label>
      </div>
      <p
        class="rh-field__description"
        id="snap-include-description"
      >
        Adds relevance-selected excerpts.
      </p>
    </div>
    <div
      class="rh-field rh-field--inline"
    >
      <div
        class="rh-field__row"
      >
        <span
          class="rh-checkbox"
        >
          <input
            class="rh-checkbox__input"
            id="snap-all"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="rh-checkbox__box"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-minus rh-icon"
              data-icon="minus"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
            </svg>
          </span>
        </span>
        <label
          class="rh-field__label"
          for="snap-all"
        >
          All works
        </label>
      </div>
    </div>
    <div
      class="rh-field rh-field--inline"
      data-invalid="true"
    >
      <div
        class="rh-field__row"
      >
        <span
          class="rh-checkbox"
        >
          <input
            aria-describedby="snap-agree-error"
            aria-invalid="true"
            class="rh-checkbox__input"
            id="snap-agree"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="rh-checkbox__box"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check rh-icon"
              data-icon="check"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
        </span>
        <label
          class="rh-field__label"
          for="snap-agree"
        >
          Agree
        </label>
      </div>
      <p
        class="rh-field__error"
        id="snap-agree-error"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-alert rh-icon"
          data-icon="alert-circle"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="12"
            x2="12"
            y1="8"
            y2="12"
          />
          <line
            x1="12"
            x2="12.01"
            y1="16"
            y2="16"
          />
        </svg>
        <span>
          You must agree to continue.
        </span>
      </p>
    </div>
    <div
      class="rh-field rh-field--inline is-disabled"
    >
      <div
        class="rh-field__row"
      >
        <span
          class="rh-checkbox is-disabled"
        >
          <input
            class="rh-checkbox__input"
            disabled=""
            id="snap-locked"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="rh-checkbox__box"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check rh-icon"
              data-icon="check"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
        </span>
        <label
          class="rh-field__label"
          for="snap-locked"
        >
          Locked
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox theme x density > matches the dark / compact snapshot 1`] = `
<div
  data-density="compact"
  data-theme="dark"
>
  <div>
    <div
      class="rh-field rh-field--inline"
    >
      <div
        class="rh-field__row"
      >
        <span
          class="rh-checkbox"
        >
          <input
            aria-describedby="snap-include-description"
            checked=""
            class="rh-checkbox__input"
            id="snap-include"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="rh-checkbox__box"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check rh-icon"
              data-icon="check"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
        </span>
        <label
          class="rh-field__label"
          for="snap-include"
        >
          Include prior sessions
        </label>
      </div>
      <p
        class="rh-field__description"
        id="snap-include-description"
      >
        Adds relevance-selected excerpts.
      </p>
    </div>
    <div
      class="rh-field rh-field--inline"
    >
      <div
        class="rh-field__row"
      >
        <span
          class="rh-checkbox"
        >
          <input
            class="rh-checkbox__input"
            id="snap-all"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="rh-checkbox__box"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-minus rh-icon"
              data-icon="minus"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
            </svg>
          </span>
        </span>
        <label
          class="rh-field__label"
          for="snap-all"
        >
          All works
        </label>
      </div>
    </div>
    <div
      class="rh-field rh-field--inline"
      data-invalid="true"
    >
      <div
        class="rh-field__row"
      >
        <span
          class="rh-checkbox"
        >
          <input
            aria-describedby="snap-agree-error"
            aria-invalid="true"
            class="rh-checkbox__input"
            id="snap-agree"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="rh-checkbox__box"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check rh-icon"
              data-icon="check"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
        </span>
        <label
          class="rh-field__label"
          for="snap-agree"
        >
          Agree
        </label>
      </div>
      <p
        class="rh-field__error"
        id="snap-agree-error"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-alert rh-icon"
          data-icon="alert-circle"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="12"
            x2="12"
            y1="8"
            y2="12"
          />
          <line
            x1="12"
            x2="12.01"
            y1="16"
            y2="16"
          />
        </svg>
        <span>
          You must agree to continue.
        </span>
      </p>
    </div>
    <div
      class="rh-field rh-field--inline is-disabled"
    >
      <div
        class="rh-field__row"
      >
        <span
          class="rh-checkbox is-disabled"
        >
          <input
            class="rh-checkbox__input"
            disabled=""
            id="snap-locked"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="rh-checkbox__box"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check rh-icon"
              data-icon="check"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
        </span>
        <label
          class="rh-field__label"
          for="snap-locked"
        >
          Locked
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox theme x density > matches the light / comfortable snapshot 1`] = `
<div
  data-density="comfortable"
  data-theme="light"
>
  <div>
    <div
      class="rh-field rh-field--inline"
    >
      <div
        class="rh-field__row"
      >
        <span
          class="rh-checkbox"
        >
          <input
            aria-describedby="snap-include-description"
            checked=""
            class="rh-checkbox__input"
            id="snap-include"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="rh-checkbox__box"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check rh-icon"
              data-icon="check"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
        </span>
        <label
          class="rh-field__label"
          for="snap-include"
        >
          Include prior sessions
        </label>
      </div>
      <p
        class="rh-field__description"
        id="snap-include-description"
      >
        Adds relevance-selected excerpts.
      </p>
    </div>
    <div
      class="rh-field rh-field--inline"
    >
      <div
        class="rh-field__row"
      >
        <span
          class="rh-checkbox"
        >
          <input
            class="rh-checkbox__input"
            id="snap-all"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="rh-checkbox__box"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-minus rh-icon"
              data-icon="minus"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
            </svg>
          </span>
        </span>
        <label
          class="rh-field__label"
          for="snap-all"
        >
          All works
        </label>
      </div>
    </div>
    <div
      class="rh-field rh-field--inline"
      data-invalid="true"
    >
      <div
        class="rh-field__row"
      >
        <span
          class="rh-checkbox"
        >
          <input
            aria-describedby="snap-agree-error"
            aria-invalid="true"
            class="rh-checkbox__input"
            id="snap-agree"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="rh-checkbox__box"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check rh-icon"
              data-icon="check"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
        </span>
        <label
          class="rh-field__label"
          for="snap-agree"
        >
          Agree
        </label>
      </div>
      <p
        class="rh-field__error"
        id="snap-agree-error"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-alert rh-icon"
          data-icon="alert-circle"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="12"
            x2="12"
            y1="8"
            y2="12"
          />
          <line
            x1="12"
            x2="12.01"
            y1="16"
            y2="16"
          />
        </svg>
        <span>
          You must agree to continue.
        </span>
      </p>
    </div>
    <div
      class="rh-field rh-field--inline is-disabled"
    >
      <div
        class="rh-field__row"
      >
        <span
          class="rh-checkbox is-disabled"
        >
          <input
            class="rh-checkbox__input"
            disabled=""
            id="snap-locked"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="rh-checkbox__box"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check rh-icon"
              data-icon="check"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
        </span>
        <label
          class="rh-field__label"
          for="snap-locked"
        >
          Locked
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkbox theme x density > matches the light / compact snapshot 1`] = `
<div
  data-density="compact"
  data-theme="light"
>
  <div>
    <div
      class="rh-field rh-field--inline"
    >
      <div
        class="rh-field__row"
      >
        <span
          class="rh-checkbox"
        >
          <input
            aria-describedby="snap-include-description"
            checked=""
            class="rh-checkbox__input"
            id="snap-include"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="rh-checkbox__box"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check rh-icon"
              data-icon="check"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
        </span>
        <label
          class="rh-field__label"
          for="snap-include"
        >
          Include prior sessions
        </label>
      </div>
      <p
        class="rh-field__description"
        id="snap-include-description"
      >
        Adds relevance-selected excerpts.
      </p>
    </div>
    <div
      class="rh-field rh-field--inline"
    >
      <div
        class="rh-field__row"
      >
        <span
          class="rh-checkbox"
        >
          <input
            class="rh-checkbox__input"
            id="snap-all"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="rh-checkbox__box"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-minus rh-icon"
              data-icon="minus"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
            </svg>
          </span>
        </span>
        <label
          class="rh-field__label"
          for="snap-all"
        >
          All works
        </label>
      </div>
    </div>
    <div
      class="rh-field rh-field--inline"
      data-invalid="true"
    >
      <div
        class="rh-field__row"
      >
        <span
          class="rh-checkbox"
        >
          <input
            aria-describedby="snap-agree-error"
            aria-invalid="true"
            class="rh-checkbox__input"
            id="snap-agree"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="rh-checkbox__box"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check rh-icon"
              data-icon="check"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
        </span>
        <label
          class="rh-field__label"
          for="snap-agree"
        >
          Agree
        </label>
      </div>
      <p
        class="rh-field__error"
        id="snap-agree-error"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-circle-alert rh-icon"
          data-icon="alert-circle"
          fill="none"
          focusable="false"
          height="14"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="12"
            x2="12"
            y1="8"
            y2="12"
          />
          <line
            x1="12"
            x2="12.01"
            y1="16"
            y2="16"
          />
        </svg>
        <span>
          You must agree to continue.
        </span>
      </p>
    </div>
    <div
      class="rh-field rh-field--inline is-disabled"
    >
      <div
        class="rh-field__row"
      >
        <span
          class="rh-checkbox is-disabled"
        >
          <input
            class="rh-checkbox__input"
            disabled=""
            id="snap-locked"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="rh-checkbox__box"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-check rh-icon"
              data-icon="check"
              fill="none"
              focusable="false"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 6 9 17l-5-5"
              />
            </svg>
          </span>
        </span>
        <label
          class="rh-field__label"
          for="snap-locked"
        >
          Locked
        </label>
      </div>
    </div>
  </div>
</div>
`;
